--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="km_da_percorrere p-5">
                         <h3>Km da percorrere</h3>
-                        <input type="text" id="km-da_percorrere" value="">
+                        <input type="text" id="km_da_percorrere" value="">
                     </div>
 
                     <div class="fascia_di_eta p-5">
