--- a/index.html
+++ b/index.html
@@ -57,44 +57,44 @@
         <!-- /.dati_utente container -->
 
         <h2 class=" text-uppercase text-white my-3"> il tuo biglietto</h2>
-        <section id="dati_biglietto container bg-light rounded-3">
+        <section id="dati_biglietto" class="container bg-light rounded-3 p-5">
             <h3 class="text-uppercase">
                 dettaglio passeggeri
             </h3>
 
             <div class="row">
                 <div class="col-3 bg-danger">
-                    <h3 class="text-uppercase">
+                    <h3 class="text-uppercase pt-4">
                         nome passeggero
                     </h3>
-                    <p id="nome_passeggero"></p>
+                    <h3 id="nome_passeggero"></h3>
                 </div>
-                <div class="col">
+                <div class="col-2">
                     <h3>
                         Offerta
                     </h3>
-                    <p>
+                    <h3>
                         Sconto
-                        <input type="text" id="sconto_applicato" >
-                    </p>
+                        <input class="text-center border-0 bg-transparent mw-100" type="text" id="sconto_applicato" >
+                    </h3>
                 </div>
                 <div class="col">
                     <h3>
                         Carrozza
                     </h3>
-                    <p id="num_carrozza"></p>
+                    <h3 id="num_carrozza"></h3>
                 </div>
                 <div class="col">
                     <h3>
                         Codice CP
                     </h3>
-                    <p id="codice_cp"></p>
+                    <h3 id="codice_cp"></h3>
                 </div>
                 <div class="col">
                     <h3>
                         Costo biglietto
                     </h3>
-                    <p id="costo_biglietto"></p>
+                    <h3 id="costo_biglietto"></h3>
                 </div>
             </div>
         </section>
