--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="genera_o_annulla d-flex justify-content-center">
                     <button class="m-2" id="genera">Genera</button>
-                    <button class="m-2" id="annulla">Annula</button>
+                    <button class="m-2" id="annulla">Annulla</button>
                 </div>
 
 
